freesia/manifests/temporis/thanos-store/service-grpc.yaml
apiVersion: v1
kind: Service
metadata:
  name: thanos-store-grpc
  labels:
    app.kubernetes.io/name: thanos-store

spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - port: 10901
    targetPort: grpc
    protocol: TCP
    name: grpc
  selector:
    app.kubernetes.io/name: thanos-store
