freesia/manifests/temporis/thanos-store/ingress-grpc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thanos-store-grpc
  labels:
    app.kubernetes.io/name: thanos-store
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: thanos-store-grpc.harvestasya.org
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: thanos-store-grpc
            port:
              number: 10901
