freesia/manifests/temporis/thanos-store/ingressroute-http.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: thanos-store-http

spec:
  routes:
    - kind: Rule
      match: Host(`thanos-store.harvestasya.org`)
      services:
        - name: thanos-store-http
          port: 10902
